--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Black+Ops+One&family=Yatra+One&display=swap');
 :root {
     --icons-bgcolor: #b2b6be;
     --gray: #808080;
     --white: #ffffff;
     --red: #ff0000;
+    --burgundy:#d9291c;
     --slider-bgcolor: #1c1c1c;
     --div-bgcolor: #f7f7f8;
+    --footer-bgcolor:#f7f7f7;
 }
 * {
     margin: 0;
@@ -46,6 +48,18 @@ a {
     max-width: 1500px;
     margin: auto;
 }
+.card-link {
+    bottom: 10%; 
+    margin-top: auto;
+    color: var(--red);
+    font-weight: 600;
+    font-size: 1.1rem;
+}
+
+.card-link i {
+    margin-left: 5px;
+}
+
 .header__top {
     display: flex;
     align-items: center;
@@ -55,7 +69,6 @@ a {
 .header__top-logo {
     display: flex;
     align-items: center;
-    justify-content: space-between;
 }
 .header__logo-img {
     width: 4rem;
@@ -65,7 +78,7 @@ a {
     font-size: 3rem;
     font-weight: 700;
     margin-left: 1rem;
-    font-family: 'Tilt Prism', cursive;
+    font-family: 'Audiowide', cursive;  
 }
 .header__top-nav {
     list-style: none;
@@ -393,10 +406,10 @@ nav .mega h4 {
 
 .company-content .title .big-title {
     margin-top: 7rem;
-    font-size: 7rem;
-    font-weight: 900;
+    font-size: 8rem;
+    font-weight: 600;
     opacity: .1;
-    letter-spacing: 1rem;
+    letter-spacing: .5rem;
 }
 
 .company-content .title .small-title {
@@ -512,18 +525,6 @@ nav .mega h4 {
     font-size: 1.5rem;
     top: 30%;
 }
-
-.video-card .card-link {
-    bottom: 10%; 
-    margin-top: auto;
-    color: var(--red);
-    font-weight: 600;
-    font-size: 1.1rem;
-}
-
-.video-card .card-link i {
-    margin-left: 5px;
-}
 .products__title{
     position: relative;
     text-align: center;
@@ -534,10 +535,10 @@ nav .mega h4 {
 }
 .products__title .big-title {
     margin-top: 7rem;
-    font-size: 7rem;
-    font-weight: 900;
+    font-size: 8rem;
+    font-weight: 600;
     opacity: .1;
-    letter-spacing: 1rem;
+    letter-spacing: .5rem;
 }
 .products__title .small-title {
     position: absolute;
@@ -663,15 +664,18 @@ nav .mega h4 {
     width: 100%;
     height: 100vh;
 }
+.career .container{
+    position: relative;
+}
 .career .title{
     position: relative;
 }
 .career .title .big-title {
     margin-top: 7rem;
-    font-size: 7rem;
-    font-weight: 900;
+    font-size: 8rem;
+    font-weight: 600;
     opacity: .1;
-    letter-spacing: 1rem;
+    letter-spacing: .5rem;
 }
 .career .title .small-title {
     position: absolute;
@@ -697,3 +701,115 @@ nav .mega h4 {
     margin: 0 10rem 3rem 3rem;
     font-size: 3rem;
 }
+.career-content{
+    position: absolute;
+    top: 0;
+    right: -7rem;
+    width: 45%;
+    height: 50vh;
+    background-color: var(--burgundy);
+    color: var(--white);
+    padding: 5rem 5rem 0 5rem;
+}
+.career-content h3{
+    font-weight: 300;
+    margin-bottom: 3rem;
+}
+.career-content .card-link{
+    color: var(--white);
+    font-size: 1.2rem;
+}
+.career-content .card-link i{
+    margin-left: 2rem;
+}
+.career-content img {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%; 
+    height: auto; 
+    opacity: .5;
+}
+.communication {
+    width: 100%;
+    height: 70vh;
+}
+.communication .title{
+    position: relative;
+    margin-bottom: 5rem;
+}
+.communication .title .big-title{
+    margin-top: 7rem;
+    font-size: 8rem;
+    font-weight: 600;
+    opacity: .1;
+    letter-spacing: .5rem;
+}
+.communication .title .small-title{
+    position: absolute;
+    bottom: -0.4rem;
+    white-space: nowrap;
+    font-size: 4rem;
+    opacity: .7;
+    font-weight: 400;
+}
+.communication__content{
+    width: 40%;
+    height: 100%;
+    margin-right: 4rem;
+}
+.communication__content table{
+    width: 600px;
+}
+.communication__content td{
+   padding: 1rem 1rem 1rem 0;
+}
+.communication__map{
+    width: 60%;
+    position: relative;
+}
+.communication__map img {
+    width: 100%;
+    margin-top: 2rem;
+    z-index: -5;
+}
+.communication__map a{
+    color: black;
+}
+.communication__map i {
+    position: absolute;
+    color: var(--white);
+    background-color: var(--gray);
+    padding: .4rem .6rem;
+    border-radius: 50%;
+    top: 6rem;
+    left: 3rem;
+}
+.footer{
+    width: 100%;
+    height: 80vh;
+    background-color: var(--footer-bgcolor);
+    padding-top: 5rem;
+}
+.footer .container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+}
+.footer__column {
+    flex: 1; 
+    margin: 5px;
+    min-height: 100px;
+}
+.footer__column h6{
+    font-size: 1.1rem;
+    padding-top:1rem;
+    padding-bottom:1rem;
+    text-align: center;
+}
+.footer__column li{
+    margin-bottom: 1rem;
+}
+
+
+
